--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav id="home" class="navbar">
-        <ul class="nav-links">
-            <li class="nav-link">
-                <a href="#home">Home</a>
-            </li>
-            <li class="nav-link">
-                <a href="#about">About</a>
-            </li>
-            <li class="nav-link">
-                <a href="tickets.html">Tickets</a>
-            </li>
-            <li class="nav-link">
-                <a href="#singers">Singers</a>
-            </li>
-            <li class="nav-link">
-                <a href="merch.html">Merch</a>
-            </li>
-            <li class="nav-link">
-                <a href="#team">Our Team</a>
-            </li>
-            <li class="nav-link">
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
+<nav id="navbar" class="navbar">
+    <ul class="nav-links">
+        <li class="nav-link">
+            <a href="index.html">Domů</a>
+        </li>
+        <li class="nav-link">
+            <a href="index.html#about">O nás</a>
+        </li>
+        <li class="nav-link">
+            <a href="tickets.html">Vstupenky</a>
+        </li>
+        <li class="nav-link">
+            <a href="index.html#singers">Zpěváci</a>
+        </li>
+        <li class="nav-link">
+            <a href="merch.html">Oblečení</a>
+        </li>
+        <li class="nav-link">
+            <a href="index.html#team">Náš tým</a>
+        </li>
+        <li class="nav-link">
+            <a href="index.html#contact">Kontakt</a>
+        </li>
+    </ul>
+</nav>
     <header>
         <div class="intro-cointainer">
             <h1>Ultra Miami Festival</h1>
@@ -42,7 +42,7 @@
         <div id="about" class="about-festival">
             <h2>O Nás</h2>
             <p><strong>Festival </strong>v Miami je jedním z nejživějších a nejbarevnějších událostí v USA. Každoročně přitahuje tisíce návštěvníků z celého světa, kteří přicházejí oslavit hudbu, kulturu a umění. Ulice města ožívají hudebními vystoupeními od nejznámějších umělců až po talentované místní hudebníky. Kromě hudby si mohou účastníci užít různé gastronomické zážitky, které reflektují bohatou kulinářskou scénu Floridy. <strong>Festival</strong> také zahrnuje umělecké instalace, workshopy a interaktivní akce, které propojují komunitu. Místní umělci mají příležitost předvést svá díla a inspirovat ostatní. Po celou dobu trvání festivalu panuje přátelská atmosféra, která oslavuje rozmanitost a kreativitu. Miami se tak stává místem setkání a sdílení zážitků pro všechny, kdo se chtějí bavit a užít si nezapomenutelné chvíle.</p>
-            <h3 id="singers">Singers</h3>
+            <h3 id="singers">Zpěváci</h3>
         </div>
         <div id="main-container">
             <h2>Taylor Swift</h2>
@@ -56,40 +56,39 @@
         </div>
         <div id="team" class="testimonials">
             <h2 id="our team">Náš tým</h2>
-            <p>
-                Lorem ipsum</p>
+            <p>Jsme tři přátelé, kteří se rozhodli spojit své dovednosti, aby vytvořili festival, na který se nezapomíná. Každý z nás má svoji jasnou roli, díky které všechno funguje:</p>
             <div class="testimonial-cards">
                 <div class="testimonial-card">
                     <img src="images/default_avatar.jpg" alt="?">
-                    <p>Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin.</p>
-                    <h3>Nar Reynolds</h3>
-                    <h4>Marketing</h4>
+                    <p>Vedoucí celého projektu. Má na starosti, aby všechny části festivalu skvěle fungovaly a do sebe zapadaly. Jeho preciznost a schopnost plánování jsou klíčem k úspěchu celého podniku. Neustále dohlíží na to, aby vše šlo podle plánu a každý detail byl promyšlený.</p>
+                    <h3>Ryan Gosling</h3>
+                    <h4>Ředitel festivalu</h4>
                 </div>
                 <div class="testimonial-card">
-                    <img src="images/default_avatar.jpg" alt="?">
-                    <p>Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent elementum.</p>
-                    <h3>Celia Almeda</h3>
-                    <h4>Headmaster</h4>
+                    <img src="images/dana.jpg" alt="?">
+                    <p>Kreativec, který dává festivalu jeho jedinečnou podobu. Od grafiky přes program až po atmosféru – všechno jde přes jeho šikovné ruce a nápady. S nadšením vymýšlí nové způsoby, jak překvapit návštěvníky a udělat z festivalu výjimečný zážitek.</p>
+                    <h3>Dana White</h3>
+                    <h4>Kreativní manažer</h4>
                 </div>
                 <div class="testimonial-card">
-                    <img src="images/default_avatar.jpg" alt="?">
-                    <p> Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin. Nibh nisl dictumst vestibulum rhoncus est pellentesque elit.</p>
-                    <h3>Bob Roberts</h3>
-                    <h4>Sales</h4>
+                    <img src="images/jiri.png" alt="?">
+                    <p>Produkční a organizátor logistiky. Jeho energie a schopnost řešit problémy jsou k nezaplacení. Zajišťuje, aby všechny technické a organizační záležitosti běžely hladce. Díky jeho schopnosti jednat s partnery a dodavateli se na festivalu nic nezadrhne.</p>
+                    <h3>Jiří Procházka</h3>
+                    <h4>Produkční manažer</h4>
                 </div>
             </div>
         </div>
         <div id="contact" class="contact-container">
-            <h2 id="contact2">Contact Form</h2>
+            <h2 id="contact2">Kontaktní formulář</h2>
             <form id="contact-form">
-                <label for="first-name">First name:</label>
-                <input id="first-name" type="text" placeholder="Input four first name . . .">
-                <label for="last-name">Last name:</label>
-                <input id="last-name" type="text" placeholder="Input four last name . . .">
+                <label for="first-name">Jméno:</label>
+                <input id="first-name" type="text" placeholder="Napiš svoje jméno . . .">
+                <label for="last-name">Příjmení:</label>
+                <input id="last-name" type="text" placeholder="Napiš svoje přijmení . . .">
                 <label for="email">E-mail</label>
-                <input id="email" type="email" placeholder="Input four e-mail . . .">
-                <label for="Message">Message:</label>
-                <textarea id="Message" placeholder="Write your message here . . ."></textarea>
+                <input id="email" type="email" placeholder="Napiš tvůj e-mail . . .">
+                <label for="Message">Zprává:</label>
+                <textarea id="Message" placeholder="Napiš zprávu . . ."></textarea>
                 <label for="GDPR">GDPR</label>
                 <input id="GDPR" type="checkbox">
                 <input type="button" value="Send">
@@ -108,23 +107,29 @@
         <nav>
             <ul class="footer-links">
                 <li class="footer-link">
-                    <a href="#home">Home</a>
+                    <a href="#navbar">Domů</a>
                 </li>
                 <li class="footer-link">
-                    <a href="#about">About</a>
+                    <a href="#about">O nás</a>
                 </li>
                 <li class="footer-link">
-                    <a href="#singers">Singers</a>
+                    <a href="tickets.html">Vstupenky</a>
+                </li>
+                <li class="nav-link">
+                    <a href="#singers">Zpěváci</a>
                 </li>
                 <li class="footer-link">
-                    <a href="#our team">Our Team</a>
+                    <a href="merch.html">Oblečení</a>
                 </li>
                 <li class="footer-link">
-                    <a href="#contact">Contact</a>
+                    <a href="#our team">Náš tým</a>
+                </li>
+                <li class="footer-link">
+                    <a href="#contact">Kontakt</a>
                 </li>
             </ul>
         </nav>
-        <p class="copyright">2024 @ Štěpán Javora Copyright</p>
+        <p class="copyright">2025 @ Štěpán Javora Copyright</p>
     </footer>
 </body>
 </html>
