--- a/tickets.html
+++ b/tickets.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <title>Vstupenky</title>
     <link rel="stylesheet" href="tickets-styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <nav class="navbar">
     <ul class="nav-links">
         <li class="nav-link">
-            <a href="index.html">Home</a>
+            <a href="index.html">Domů</a>
         </li>
         <li class="nav-link">
-            <a href="index.html#about">About</a>
+            <a href="index.html#about">O nás</a>
         </li>
         <li class="nav-link">
-            <a href="tickets.html">Tickets</a>
+            <a href="tickets.html">Vstupenky</a>
         </li>
         <li class="nav-link">
-            <a href="index.html#singers">Singers</a>
+            <a href="index.html#singers">Zpěváci</a>
         </li>
         <li class="nav-link">
-            <a href="merch.html">Merch</a>
+            <a href="merch.html">Oblečení</a>
         </li>
         <li class="nav-link">
-            <a href="index.html#team">Our Team</a>
+            <a href="index.html#team">Náš tým</a>
         </li>
         <li class="nav-link">
-            <a href="index.html#contact">Contact</a>
+            <a href="index.html#contact">Kontakt</a>
         </li>
     </ul>
 </nav>
@@ -104,5 +105,40 @@
         <button>Vstupenky</button>
     </div>
 </div>
+<footer>
+    <!-- pro ikony sociálních sítí použijeme fontawesome, což jsou ikony, odkaz na knihovnu je v sekci head -->
+    <div class="social-icons">
+        <i class="fa fa-facebook-f"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-youtube-play"></i>
+    </div>
+    <nav>
+        <ul class="footer-links">
+            <li class="footer-link">
+                <a href="index.html#home">Domů</a>
+            </li>
+            <li class="footer-link">
+                <a href="index.html#about">O nás</a>
+            </li>
+            <li class="footer-link">
+                <a href="tickets.html">Vstupenky</a>
+            </li>
+            <li class="footer-link">
+                <a href="index.html#singers">Zpěváci</a>
+            </li>
+            <li class="footer-link">
+                <a href="merch.html">Oblečení</a>
+            </li>
+            <li class="footer-link">
+                <a href="index.html#our team">Náš tým</a>
+            </li>
+            <li class="footer-link">
+                <a href="index.html#contact">Kontakt</a>
+            </li>
+        </ul>
+    </nav>
+    <p class="copyright">2024 @ Štěpán Javora Copyright</p>
+</footer>
 </body>
 </html>
